[package]
name = "salt_utxo_rust"
version = "0.1.0"
authors = ["Lee Fordyce <leefordyce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "bigdecimal" ] }
tide-sqlx = "0.6.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = { version = "0.2.0", features = ["serde"]}
http-types = "2.10.0"
